--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,27 @@
+.coco{
+  background: red;
+  color: white;
+  font-size: 20px;
+  font-family: cursive;
+}
+.coc{
+  background: yellow;
+  color: black;
+  font-size: 20px;
+  font-family: cursive;
+}
+.coo{
+  background: green;
+  color: white;
+  font-size: 20px;
+  font-family: cursive;
+}
 .App {
   text-align: center;
 }
-
+.na {
+  background: yellow;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +55,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+img{
+  width: 250px;
+  height: 259px ;
 }
