--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+.savee{
+  background: white;
+  border: none;
+  width: 100%;
+}
+.mainn{
+  background: white;
+  border-color: black;
+  border-width: 50px;  
+  border: ridge;
+}
 .coco{
   background: red;
   color: white;
